Code/API changes in benchmarks; Adds normalized missing libraries and exports for benchmarks affected via J8 -> J11.